--- a/ProjectManagement/src/main/resources/templates/importuserfile.html
+++ b/ProjectManagement/src/main/resources/templates/importuserfile.html
@@ -95,7 +95,7 @@
                     <a href="#" class="d-flex align-items-center link-dark text-decoration-none ">
                         <img src="https://cdn-icons-png.flaticon.com/512/3884/3884871.png" alt="" width="40" height="40"
                             class="rounded-circle me-2">
-                        <strong> STAFF <br> <div th:text="${firstname} + ' ' + ${lastname}"> </div></strong>
+                        <strong> STAFF <br> <div th:text="${session.firstName} + ' ' + ${session.lastName}"> </div></strong>
                     </a>
                 </div>
             </div>
