--- a/ProjectManagement/src/main/resources/templates/joingroup.html
+++ b/ProjectManagement/src/main/resources/templates/joingroup.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Sunflower:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    <title>homestudent</title>
+    <title>joingroup</title>
     <style>
         body {
             margin: 0;
@@ -195,7 +195,7 @@
         </div>
         <ul class="nav nav-pills flex-column mb-auto">
             <li class="nav-item">
-                <a href="/homestudent" class="nav-link active" aria-current="page">
+                <a href="/homestudent" class="nav-link link-dark" aria-current="page">
                     <img src="https://cdn1.iconfinder.com/data/icons/jumpicon-basic-ui-glyph-1/32/-_Home-House--1024.png" width="16" height="16" fill="currentColor"
                         class="bi bi-person-add" viewBox="0 0 16 16">
                         <path
@@ -235,7 +235,7 @@
                 </a>
             </li>
             <li>
-                <a href="/joingroup" class="nav-link link-dark">
+                <a href="/joingroup" class="nav-link active">
                     <img src="https://cdn3.iconfinder.com/data/icons/interaction-design/512/Import_B-512.png" alt=""
                         width="16" height="16">
                     Join Group
