--- a/ProjectManagement/src/main/resources/templates/createsubject.html
+++ b/ProjectManagement/src/main/resources/templates/createsubject.html
@@ -237,7 +237,7 @@
             </div>
             <!-- FILEPATH: /c:/Users/Mayme/Downloads/OOP-20240108T134845Z-001/OOP/ProjectManagement/src/main/resources/templates/createsubject.html -->
 
-            <div class="p-3" style="width: 100%; height: 50vh; background-color: white;border-radius: 10px;">
+            <div class="p-3" style="width: 100%;  background-color: white;border-radius: 10px;">
                 <table class="table table-striped">
                     <thead>
                         <tr class="bg-light">
