--- a/ProjectManagement/src/main/resources/templates/template_student.html
+++ b/ProjectManagement/src/main/resources/templates/template_student.html
@@ -15,7 +15,7 @@
     <link href="assets/css/style.bundle.css" rel="stylesheet" type="text/css" />
     <link href="/styles.css" rel="stylesheet"  type="text/css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    <title>Join Group</title>
+    <title>creategroup</title>
     <style>
 
     </style>
