--- a/ProjectManagement/src/main/resources/static/styles.css
+++ b/ProjectManagement/src/main/resources/static/styles.css
@@ -76,15 +76,7 @@ body {
     margin: 0;
 }
 
-.search {
-    display: flex;
-    align-items: center;
-    margin-top: 20px;
-}
 
-.search input[type="text"] {
-    margin-right: 10px;
-}
 
 .search button {
     background-color: green;
@@ -165,4 +157,78 @@ body {
     padding: 20px;
     background: #fff;
     margin: 15px;
+}
+.input{
+    height: 50px;
+}
+
+.form-grid {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 10px;
+}
+.table-grid {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    gap: 10px;
+}
+.fetch-table {
+    background-color: #eeeeee;
+}
+
+.notification {
+    position: fixed;
+    top: 10px;
+    right: 10px;
+    z-index: 100; /* Ensure the button is above other elements */
+}
+.notification-button {
+    border: none;
+    border-radius: 50%;
+    background-color: #f0f0f0;
+    color: #333;
+    width: 50px;
+    height: 50px;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.notification-button .fas {
+    font-size: 24px;
+}
+.notification-button:hover {
+    background-color: #e0e0e0; /* Change to the color you want when hovered */
+}
+.badge {
+    position: absolute;
+    top: 0;
+    right: 0;
+    background-color: red;
+    color: white;
+    border-radius: 50%;
+    padding: 5px 10px;
+    font-size: 14px;
+}
+.notification-inbox {
+    display: none; /* Hidden by default */
+    position: absolute;
+    right: 0;
+    width: 200px; /* Adjust as needed */
+    background-color: #fff;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    padding: 10px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    z-index: 99; /* Ensure the inbox is above other elements */
+}
+.search  {
+    background-color:#009834;
+    color: white;
+    border: none;
+    padding: 5px 10px;
+}
+.search:hover {
+    background-color: #005e21;
 }
