--- a/ProjectManagement/src/main/resources/templates/menu_bar_student.html
+++ b/ProjectManagement/src/main/resources/templates/menu_bar_student.html
@@ -6,7 +6,7 @@
     </div>
 </div>
 <div class="notification">
-    <button type="button" class="notification-button" onclick="toggleNotifications()">
+    <button type="button" class="notification-button" onclick="toggleNomenu_bar_studenttifications()">
         <i class="fas fa-bell"></i>
         <span id="badge" class="badge"></span> <!-- Remove the hardcoded number of notifications -->
     </button>
